# rosdiscover-cxx-recover

./: .dockerignore  .gitmodules  CMakeLists.txt  README.md  README.rst  \
archslicer/: CMakeLists.txt  Pass.cpp
docker/: Dockerfile.builder  Dockerfile.llvm  Dockerfile.rosdiscover  Makefile  install
example/: hello  hello.bc  hello.ll
example/navigation/: Dockerfile  run.sh
include/rosdiscover/: RosApiCall.h
include/rosdiscover-clang/: CallExprFinder.h  FunctionCallFinder.h  RawStatement.h  RosApiCall.h  StmtOrderingVisitor.h  utils.h
include/rosdiscover-clang/ApiCall/: Calls.h  Finder.h  Location.h  NameSymbolizer.h  RosApiCall.h
include/rosdiscover-clang/ApiCall/Calls/: AdvertiseServiceCall.h  AdvertiseTopicCall.h  BareDeleteParamCall.h  BareGetParamCachedCall.h  BareGetParamCall.h  BareGetParamWithDefaultCall.h  BareHasParamCall.h  BareServiceCall.h  BareSetParamCall.h  CameraPublisherPublishCall.h  ConstSleepCall.h  CreateTimerCall.h  DeleteParamCall.h  DiagnosedPublisherPublishCall.h  DiagnosticUpdateCall.h  GetParamCachedCall.h  GetParamCall.h  GetParamWithDefaultCall.h  HasParamCall.h  Kind.h  MessageFiltersRegisterCallbackCall.h  MessageFiltersSubscribeCall.h  MessageFiltersSubscriberCall.h  PublishCall.h  RateSleepCall.h  RosInitCall.h  SendTransformCall.h  ServiceClientCall.h  SetParamCall.h  SubscribeTopicCall.h  Util.h
include/rosdiscover-clang/ApiCall/Symbolic/: SymbolicApiCall.h
include/rosdiscover-clang/Ast/: Ast.h  Context.h  Function.h  Program.h
include/rosdiscover-clang/Ast/Assign/: AssignVisitor.h
include/rosdiscover-clang/Ast/Decl/: Decls.h  LocalVariable.h  Parameter.h  Variable.h
include/rosdiscover-clang/Ast/Stmt/: Annotated.h  ApiCall.h  Assignment.h  Compound.h  ControlDependency.h  EnumReference.h  Exprs.h  FunctionCall.h  If.h  Stmt.h  Stmts.h  SymbolicAssignment.h  SymbolicDeclRef.h  SymbolicExpr.h  VariableReference.h  While.h
include/rosdiscover-clang/Ast/Variable/: Parameter.h  Variable.h
include/rosdiscover-clang/BackwardSymbolizer/: BoolSymbolizer.h  ExprSymbolizer.h  FloatSymbolizer.h  FunctionSymbolizer.h  IntSymbolizer.h  ObjSymbolizer.h  ProgramSymbolizer.h  RateSymbolizer.h  StringSymbolizer.h  Symbolizer.h
include/rosdiscover-clang/Builder/: StmtBuilder.h  ValueBuilder.h
include/rosdiscover-clang/Callback/: Callback.h
include/rosdiscover-clang/Cfg/: CFGBlock.h  CFGEdge.h  ControlDependenceGraph.h
include/rosdiscover-clang/ForwardSymbolic/: FunctionSymbolizer.h
include/rosdiscover-clang/Helper/: CallOrConstructExpr.h  FindDefVisitor.h  FindVirtualsVisitor.h  FormatHelper.h  StmtOrderingVisitor.h  utils.h
include/rosdiscover-clang/Name/: Expr.h  NameSymbolizer.h  SymbolicVisitor.h  Symbolizer.h
include/rosdiscover-clang/Stmt/: Annotated.h  ApiCall.h  Assignment.h  Compound.h  Stmt.h  Stmts.h
include/rosdiscover-clang/Summary/: Action.h  FunctionSummary.h
include/rosdiscover-clang/Symbolic/: ApiCall.h  Bool.h  Context.h  Function.h  FunctionCall.h  FunctionSymbolizer.h  Program.h  ProgramSymbolizer.h  Stmt.h  String.h  StringSymbolizer.h  Symbolizer.h  Value.h  Variable.h
include/rosdiscover-clang/Value/: Bool.h  Float.h  Int.h  String.h  Value.h
include/rosdiscover-clang/Variable/: LocalVariable.h  Parameter.h  Variable.h
myhello/: Pass.cpp
src/: CMakeLists.txt
src/rosdiscover/: CMakeLists.txt  RosApiCallFinderPass.cpp  RosDiscover.cpp
src/rosdiscover-clang/: CMakeLists.txt  CallExprFinder.cpp  RosDiscover.cpp  utils.h
src/rosdiscover-clang/Name/: Symbolizer.cpp
src/rosdiscover-clang/Symbolic/: Symbolizer.cpp
src/rosdiscover-llvm/: CMakeLists.txt  RosApiCallFinderPass.cpp
